web-infras/parser/tests/fixtures/esprima/es2020/import.meta/unicode-escape-meta/output.txt
[SyntaxError]: keyword can not contain any esc flag. (1,1)
1|import.m\u0065ta;
 |^
[SyntaxError]: import.meta may appear only with 'sourceType: "module" (1,1)
1|import.m\u0065ta;
 |^
